base expressions for validation server - side starting

--- a/src/layouts/auth.html
+++ b/src/layouts/auth.html
@@ -16,6 +16,7 @@
     <div id="auth">
         {% block content %}{% endblock %}
     </div>
+<script src="assets/js/validate.js"></script>
 </body>
 
 </html>
