--- a/src/assets/scss/layouts/main.scss
+++ b/src/assets/scss/layouts/main.scss
@@ -1,22 +1,17 @@
 #main {
     margin-left: 300px;
-    padding: 2rem;
+    padding: 1rem;
     @media screen and (max-width: 1199px) {
         margin-left: 0;
     }
     &.layout-navbar {
         padding: 0;
-    }
-    &.layout-horizontal {
-        padding: 0;
-        margin: 0;
-    }
     #main-content {
-        padding: 2rem;
+        padding: 1rem;
     }
 }
 .page-heading {
-    margin:  0 0 2rem;
+    margin:  0 0 0rem;
     h3 {
         font-weight: bold;
     }
@@ -37,3 +32,8 @@
 a {
     text-decoration: none;
 }
+
+.app-divider {
+    margin-left: 0px;
+    padding: 0rem 1rem;
+} }
